; ModuleID = '/home/carl/AnghaBench/linux/kernel/power/extr_qos.c_pm_qos_power_release.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/power/extr_qos.c_pm_qos_power_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { %struct.pm_qos_request* }
%struct.pm_qos_request = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @pm_qos_power_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pm_qos_power_release(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.pm_qos_request*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %6 = load %struct.file*, %struct.file** %4, align 8
  %7 = getelementptr inbounds %struct.file, %struct.file* %6, i32 0, i32 0
  %8 = load %struct.pm_qos_request*, %struct.pm_qos_request** %7, align 8
  store %struct.pm_qos_request* %8, %struct.pm_qos_request** %5, align 8
  %9 = load %struct.pm_qos_request*, %struct.pm_qos_request** %5, align 8
  %10 = call i32 @pm_qos_remove_request(%struct.pm_qos_request* %9)
  %11 = load %struct.pm_qos_request*, %struct.pm_qos_request** %5, align 8
  %12 = call i32 @kfree(%struct.pm_qos_request* %11)
  ret i32 0
}

declare dso_local i32 @pm_qos_remove_request(%struct.pm_qos_request*) #1

declare dso_local i32 @kfree(%struct.pm_qos_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
